--- a/client/src/app/components/clients/table/table.component.html
+++ b/client/src/app/components/clients/table/table.component.html
@@ -1,3 +1,8 @@
+<div class="container" id="filtro">
+  <input type="text" (keyup)="applyFilter($event)" name="" placeholder="Buscar..." id="" #input>
+  {{aviso}}
+</div>
+
 <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 demo-table">
 
   <!--- Note that these columns can be defined in any order.
