--- a/client/src/app/components/navigator/navigator.component.html
+++ b/client/src/app/components/navigator/navigator.component.html
@@ -14,10 +14,10 @@
                 <li class="nav-item">
                     <a class="nav-link" href="/informe">Deudas</a>
                 </li>
-<!-- 
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
+                    <a class="nav-link" href="/insertper">Periodo nuevo</a>
                 </li>
+<!-- 
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </li>
