(testing) Table rows checked on test.

--- a/client/src/app/views/page-insert-period/page-insert-period.component.html
+++ b/client/src/app/views/page-insert-period/page-insert-period.component.html
@@ -2,7 +2,10 @@
     <app-navigator></app-navigator>
     
     <div class="row">
-        <div class="col-md-12">
+        <div class="col-md-3">
+            <app-options></app-options>
+        </div>
+        <div class="col-md-9">
             <app-insert-debt></app-insert-debt>
         </div>
     </div>
