--- a/client/src/app/components/insert-debt/insert-debt.component.css
+++ b/client/src/app/components/insert-debt/insert-debt.component.css
@@ -1,12 +1,20 @@
 /* Structure */
 table {
 
-    width: 70%;
+    width: 100%;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   /* font-family: sans-serif; */
   font-size: large;
 
   }
+  .mat-row:hover .mat-cell {
+    border-color: currentColor;
+  }
+
+  .demo-row-is-clicked {
+    font-weight: bold;
+  }
+  
   .mat-row:nth-child(even){
     background-color: rgb(0, 255, 100);
 }
