--- a/client/src/app/components/insert-debt/insert-debt.component.html
+++ b/client/src/app/components/insert-debt/insert-debt.component.html
@@ -35,13 +35,26 @@
       <td mat-cell *matCellDef="let element"> {{element.price_rental|currency}} </td>
     </ng-container>
 
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr
+        mat-row
+        (click)="clickedRows.add(row)"
+        [class.demo-row-is-clicked]="clickedRows.has(row)"
+        *matRowDef="let row; columns: displayedColumns;"
+    ></tr>
+    
       <!-- Deuda Anter. Column -->
       <!-- <ng-container matColumnDef="overdue_debt">
         <th mat-header-cell *matHeaderCellDef> Atras </th>
         <td mat-cell *matCellDef="let element"> {{element.overdue_debt|currency}} </td>
       </ng-container> -->
-    
+<!--     
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+     -->
   </table>
-  
+      <ul>
+      <li *ngFor="let clickedRow of clickedRows">
+        Clicked on {{clickedRow.number_ctner}}
+      </li>
+    </ul>
