(dev) Print info to clicked on clients debt.

--- a/client/src/app/components/insert-debt/options/options.component.html
+++ b/client/src/app/components/insert-debt/options/options.component.html
@@ -1,1 +1,6 @@
-<p>options works!</p>
+<div class="container">
+    <ul>
+    <p> VALOR: {{ debtInfoSer.VALUE_PER_CLICK }} </p>
+    </ul>
+
+</div>
