--- a/client/src/app/components/insert-debt/insert-debt.component.html
+++ b/client/src/app/components/insert-debt/insert-debt.component.html
@@ -38,7 +38,8 @@
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
     <tr
         mat-row
-        (click)="clickedRows.add(row)"
+        (click)= "clickedRows.add(row); Clickear(); "
+        (ON)="clickedRows.add(row)"
         [class.demo-row-is-clicked]="clickedRows.has(row)"
         *matRowDef="let row; columns: displayedColumns;"
     ></tr>
