--- a/client/src/app/components/insert-debt/insert-debt.component.html
+++ b/client/src/app/components/insert-debt/insert-debt.component.html
@@ -1,14 +1,5 @@
-<!-- 
-<mat-form-field appearance="standard">
-    <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-  </mat-form-field>
-   -->
    <input type="text" (keyup)="applyFilter($event)" name="" placeholder="Filter" id="" #input>
 
-   <div class="container">
-       TOTAL PROX. MES: $ {{VALUE_PER_TOTAL}}
-   </div>
    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
   
     <!-- Number Ct. Column -->
@@ -24,10 +15,12 @@
     </ng-container>
   
     <!--  Column -->
-    <!-- <ng-container matColumnDef="current_debt">
+    <!-- 
+      <ng-container matColumnDef="current_debt">
       <th mat-header-cell *matHeaderCellDef> Deuda Total </th>
       <td mat-cell *matCellDef="let element"> {{element.current_debt|currency}} </td>
-    </ng-container> -->
+    </ng-container> 
+    -->
   
     <!-- Symbol Column -->
     <ng-container matColumnDef="price_rental">
